// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Block Menu & Menu Items renders correctly 1`] = `
<ul
  className="sc-fzpjYC kqUbUE"
>
  <li
    className="sc-fzoLag bDCXku"
  >
    <span
      className="sc-fzozJi cZHUGO"
      size={4}
    >
       Item 1 
    </span>
  </li>
  <li
    className="sc-fzoLag bDCXku"
  >
    <span
      className="sc-fzozJi cZHUGO"
      size={4}
    >
       Item 2 
    </span>
  </li>
  <li
    className="sc-fzoLag bDCXku"
  >
    <span
      className="sc-fzozJi cZHUGO"
      size={4}
    >
       Item 3 
    </span>
  </li>
</ul>
`;

exports[`Inline Menu & Menu Items renders correctly 1`] = `
<ul
  className="sc-fzpjYC kqUbUE"
>
  <li
    className="sc-fzoLag sc-fzoXzr hvMuBD"
  >
    <span
      className="sc-fzozJi cZHUGO"
      size={4}
    >
       Item 1 
    </span>
  </li>
  <li
    className="sc-fzoLag sc-fzoXzr hvMuBD"
  >
    <span
      className="sc-fzozJi cZHUGO"
      size={4}
    >
       Item 2 
    </span>
  </li>
  <li
    className="sc-fzoLag sc-fzoXzr hvMuBD"
  >
    <span
      className="sc-fzozJi cZHUGO"
      size={4}
    >
       Item 3 
    </span>
  </li>
</ul>
`;
